# RoyalePy

./: README.md  pyproject.toml
docs/: get_player_basic.md
src/: ClashAPI.py  helper.py  royalePy.py  testing.py
src/RoyalePy/: example.py
